--- a/weekly_blog.html
+++ b/weekly_blog.html
@@ -18,3 +18,11 @@ title: Weekly Blog
   </div>
   {% endfor %}
 </div>
+
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
